# RMI-DuckDB

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: alex_extension.cpp  pgm_extension.cpp  utils.h
src/include/: pgm_extension.hpp
test/sql/: pgm.test
